--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,5 +14,47 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag pildiraam:$(date +%s)
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20'
+        cache: 'npm'
+
+    - name: Install dependencies
+      run: npm ci
+
+    - name: Run linting (TypeScript type check)
+      run: npm run lint
+
+    - name: Run tests
+      run: npm test
+
+    - name: Get version info
+      id: version
+      run: |
+        VERSION=$(node -p "require('./package.json').version")
+        BUILD_NUMBER=$(git rev-list --count HEAD)
+        echo "VERSION=${VERSION}" >> $GITHUB_OUTPUT
+        echo "BUILD_NUMBER=${BUILD_NUMBER}" >> $GITHUB_OUTPUT
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Login to Docker Hub
+      if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_TOKEN }}
+
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        push: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+        tags: |
+          ${{ secrets.DOCKER_USERNAME }}/pildiraam:latest
+          ${{ secrets.DOCKER_USERNAME }}/pildiraam:${{ steps.version.outputs.VERSION }}-${{ steps.version.outputs.BUILD_NUMBER }}
+        cache-from: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/pildiraam:buildcache
+        cache-to: type=registry,ref=${{ secrets.DOCKER_USERNAME }}/pildiraam:buildcache,mode=max
